@@ -72,6 +72,12 @@ read text to draw from file STR.
 .TP 5
 .B -w, --wrap INT
 wordwrap the text to INT pixels.
+.TP 5
+.B -x, --x-offset INT
+Offset text horizontally from top left by INT pixels.
+.TP 5
+.B -y, --y-offset INT
+Offset text vertically from top left by INT pixels.
 .SH RC FILES
 rc file syntax is simple. The '#' character at the start of a line denotes
 that the line is a comment, otherwise lines are started with the name of a
